move to angular

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
-.info {
+.blue {
   color: blue;
 }
 
-.warn {
-  color: red;
+.orange {
+  color: orange;
 }
 
-.error {
+.red {
   color: red;
 }
