--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+html, body {
+  height: 100%;
+}
+
+.scrolling {
+  height: calc(100% - 54px);
+  overflow: scroll;
+}
+
+body {
+  padding: 20px;
+}
+
 .blue {
   color: blue;
 }
