--- a/views/tmbDashboardButton.html
+++ b/views/tmbDashboardButton.html
@@ -8,7 +8,8 @@
     <button ng-switch-when="bootstrap"
             type="button"
             class="btn btn-default"
-            ng-click="execCmd()">{{cmdVal}}
+            ng-click="execCmd()">
+        {{cmdVal}}
     </button>
     <input ng-switch-default type="button" ng-click="execCmd()" value="{{cmdVal}}">
 </ng-switch>
